Fix for the links overflowing

--- a/site.css
+++ b/site.css
@@ -109,7 +109,7 @@ body {
     display: grid;
 
     width: 100%;
-    height: fit-content;
+    min-height: fit-content;
     margin-left: auto;
     margin-right: auto;
     background-color: #102027;
@@ -200,7 +200,7 @@ body {
     }
 
     .content_grid {
-        height: 100%;
+        min-height: 100%;
     }
 
     .grid_info_column {
@@ -284,7 +284,7 @@ body {
     }
 
     .content_grid {
-        height: 100%;
+        min-height: 100%;
     }
 }
 
